feat: Enhance service classes with detailed documentation and future method suggestions